<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:padding="8sp"
            android:textSize="20sp"
            tools:text="Result" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="293dp"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:maxLines="5"
            android:paddingLeft="8sp"
            android:paddingTop="8sp"
            android:paddingRight="8sp"
            android:paddingBottom="8sp"
            android:textColor="@color/color_text"
            android:textSize="24sp"
            android:textStyle="italic"
            tools:text="Calculus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/ult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/button16"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/c_pressed"
                android:text="@string/c"
                android:textColor="@color/color_button_text"
                android:textColorHint="@color/color_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button20"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/menosmais"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button21"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/del"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/primeira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_2"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_3"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/barra"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/segunda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_4"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_5"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_6"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/asterisco"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/terceira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_7"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button10"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_8"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_9"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button12"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/menos"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/quarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/button13"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/_0"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button14"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/ponto"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button15"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_config"
                android:text="@string/mais"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/quinto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">


            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/igual_pressed"
                android:backgroundTint="@color/color_button_igual"
                android:text="@string/igual"
                android:textColor="@color/color_button_text"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>